added projects and experience

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ h1 {
     font-style: normal;
     font-weight: 700;
     font-size: 2.5em;
-    line-height: .754em;
+    line-height: 1em;
 }
 
 h2 {
@@ -46,7 +46,16 @@ h2 {
     font-style: normal;
     font-weight: 400;
     font-size: 2em;
-    line-height: .754em;
+    line-height: .748em;
+    color: var(--light-blue);
+}
+
+h3 {
+    font-family: 'Verdana';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.1em;
+    line-height: 1.48em;
 }
 
 .header {
@@ -56,6 +65,8 @@ h2 {
     height: 6em;
     background-color: var(--light-blue);
     box-shadow: 0 .1em .5em 0 rgb(0 0 0 / 16%), 0 .1px 1em 0 rgb(0 0 0 / 12%);
+    position: relative;
+    top: 0
 }
 
 .footer {
@@ -70,8 +81,8 @@ h2 {
     border-bottom: 0px;
     border-left: 0px;
     border-right: 0px;
-    border-color: var(--dark-blue);
-    border-style: solid
+    border-color: var(--light-blue);
+    border-style: solid;
 }
 
 .nav-item:hover {
@@ -81,6 +92,9 @@ h2 {
 
 .nav-item-selected {
     background-color: var(--dark-blue);
+}
+
+.nav-item-selected>h2 {
     color: var(--dark-beige);
 }
 
@@ -147,4 +161,93 @@ h2 {
 .page-container {
     position: relative;
     min-height: 100vh;
+}
+
+/* The side navigation menu */
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 15em;
+    background-color: var(--dark-beige);
+    position: sticky;
+    top: 0;
+    height: 100%;
+    overflow: auto;
+    float: left;
+}
+
+/* Sidebar links */
+.sidebar a {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.2em;
+    line-height: .754em;
+    text-decoration: none;
+    color: var(--light-blue);
+    display: block;
+    padding: 1em;
+}
+
+/* Active/current link */
+.sidebar a.active {
+    background-color: var(--light-blue);
+    color: var(--light-beige);
+}
+
+/* Links on mouse-over */
+.sidebar a:hover:not(.active) {
+    background-color: var(--light-blue);
+    color: var(--light-beige);
+}
+
+
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .sidebar a {
+        float: left;
+    }
+
+    div.content {
+        margin-left: 0;
+    }
+}
+
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
+}
+
+.content {
+    margin-top: 2em;
+    margin-left: 20em;
+    margin-right: 20em;
+    margin-bottom: 2em;
+    padding: 1px 16px;
+    overflow: auto;
+}
+
+.content>div>h1 {
+    margin-bottom: .2em;
+}
+
+.content>div>h2 {
+    font-size: 1.75em;
+}
+
+.content>div>h3 {
+    margin-bottom: .1em;
+}
+
+.margin-top-1em {
+    margin-top: 1em;
 }
